syntax = "proto3";

package example;

service GrpcExampleService {
  rpc GetExample (ExampleRequest) returns (ExampleResponse);
}

message ExampleRequest {
  string id = 1;
}

message ExampleResponse {
  string message = 1;
}